# youtube-video-generator

./: .claudeignore  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_video_tables.py  0003_add_tags_column.py  0004_add_youtube_accounts.py  0005_add_video_parts.py
backend/src/: logger.py  main.py
backend/src/auth/: dependencies.py  router.py  service.py
backend/src/celery_app/: celery_main.py  celery_send_email.py
backend/src/core/: config.py  database.py  security.py
backend/src/session/: models.py  repository.py  schemas.py  service.py
backend/src/user/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/video/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  workflow.py
backend/src/video/services/: llm.py  video_generator.py  youtube.py
backend/src/video/services/video_providers/: __init__.py  base.py  factory.py  http_provider.py  kling.py  luma.py  mock.py  pika.py  runway.py
backend/src/youtube/: exceptions.py  models.py  oauth.py  repository.py  router.py  schemas.py  service.py
backend/static/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts  projects.ts  youtube.ts
frontend/src/components/: ErrorMessage.tsx  Layout.tsx  MetadataEditor.tsx  PromptEditor.tsx  ProtectedRoute.tsx  Spinner.tsx  (+2 more)
(+27 files in other folders)
