[project]
name = "auth-session"
version = "0.1.0"
description = "Session-based authentication service with email confirmation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "alembic-postgresql-enum>=1.10.0",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "passlib>=1.7.4",
    "password-validator>=1.0",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.3",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "resend>=2.0.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.20.0",
  "httpx",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
